flex derection completed

--- a/index.html
+++ b/index.html
@@ -61,23 +61,28 @@
         <section class="online__game">
             <h1 class="online__heading">Online Game <span class="online__funny">Funny Videos</span></h1>
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+
             <div class="online__game__img">
                 <div class="online__img">
-                    <img src="images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 4.png" alt="" class="rec__png">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
+
                 <div class="online__img">
-                    <img src="images/Rectangle 5.png" alt="">
+                    <img src="images/Rectangle 5.png" alt=""class="rec__png">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
+
                 <div class="online__img">
-                    <img src="images/Rectangle 7.png" alt="">
+                    <img src="images/Rectangle 7.png" alt=""class="rec__png">
                     <p>Breaking game records like OG</p>
                 </div>
+
                 <div class="online__img">
-                    <img src="images/Rectangle 6.png" alt="">
+                    <img src="images/Rectangle 6.png" alt=""class="rec__png">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
+
             </div>
         </section>
 
