mobail responsive completed

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <div class="game">My Account</div>
     </div>
     <div class="icon">
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-linkedin"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter" style="color: rgb(82, 82, 255);"></i>
+        <i class="fa-brands fa-facebook" style="color: rgb(82, 82, 255);"></i>
+        <i class="fa-brands fa-youtube" style="color: red;"></i>
+        <i class="fa-brands fa-linkedin" style="color: rgb(82, 82, 255);"></i>
+        <i class="fa-brands fa-instagram" style="color: goldenrod;"></i>
         <i class="fa-brands fa-apple"></i>
     </div>
     <div class="game__name under__topic">
