--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/bg remove logo.png" type="image/x-icon">
     <title>BattlePro</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -30,11 +34,11 @@
                     PLAY LIKE THE
                 </h3>
                 <h1 class="banner__heading">
-                   G.A.O.T
+                    G.A.O.T
                 </h1>
-                <P><i class="fa-solid fa-circle-play" style="color: #FF42A5;"></i>  1-click instant play</P>
-                <p><i class="fa-solid fa-download" style="color: #FF42A5;"></i>  No Download</p>
-                <p><i class="fa-solid fa-user-group" style="color: #FF42A5;"></i>  1000s of supported online games</p>
+                <P><i class="fa-solid fa-circle-play" style="color: #FF42A5;"></i> 1-click instant play</P>
+                <p><i class="fa-solid fa-download" style="color: #FF42A5;"></i> No Download</p>
+                <p><i class="fa-solid fa-user-group" style="color: #FF42A5;"></i> 1000s of supported online games</p>
                 <div class="btn">
                     <button class="sign__btn">SIGN IN</button>
                     <button class="rogue__btn">GO ROGUE</button>
@@ -52,7 +56,10 @@
                 <h1 class="gammer__heading">
                     We are gamer
                 </h1>
-                <p>An international digital games and entertainment <br>company. We develop, publish and distribute <br>multiplayer mobile games. We reach over 400 million <br>players each month and our audience keeps growing.</p>
+                <p>An international digital games and entertainment <br>company. We develop, publish and distribute
+                    <br>multiplayer mobile games. We reach over 400 million <br>players each month and our audience
+                    keeps growing.
+                </p>
                 <button class="sign__btn know__more">KNOW MORE</button>
                 <P>our purpose...</P>
                 <p class="everyone"><q>unleash the gamer in everyone</q></p>
@@ -63,89 +70,124 @@
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
 
             <div class="online__game__img">
+
                 <div class="online__img">
                     <img src="images/Rectangle 4.png" alt="" class="rec__png">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <div class="overlay">
+                        <div class="text"><i class="fa-regular fa-circle-play"><br>Watch Now</i></div>
+                    </div>
                 </div>
 
+
+
                 <div class="online__img">
-                    <img src="images/Rectangle 5.png" alt=""class="rec__png">
+                    <img src="images/Rectangle 5.png" alt="" class="rec__png">
                     <p>Did you score? #unblockedgames #school</p>
+                    <div class="overlay">
+                        <div class="text"><i class="fa-regular fa-circle-play"><br>Watch Now</i></div>
+                    </div>
                 </div>
 
                 <div class="online__img">
-                    <img src="images/Rectangle 7.png" alt=""class="rec__png">
+                    <img src="images/Rectangle 7.png" alt="" class="rec__png">
                     <p>Breaking game records like OG</p>
+                    <div class="overlay">
+                        <div class="text"><i class="fa-regular fa-circle-play"><br>Watch Now</i></div>
+                    </div>
                 </div>
 
                 <div class="online__img">
-                    <img src="images/Rectangle 6.png" alt=""class="rec__png">
+                    <img src="images/Rectangle 6.png" alt="" class="rec__png">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <div class="overlay">
+                        <div class="text"><i class="fa-regular fa-circle-play"><br>Watch Now</i></div>
+                    </div>
                 </div>
 
             </div>
         </section>
 
-    <section class="play">
-        <div class="play__contant">
-            <h1 class="play__heading">
-                <span class="online__funny">Play Instantly,</span><br>
-                No Downloads <br>
-                No Installs.
-            </h1>
-            <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
-        </div>
+        <section class="play">
+            <div class="play__contant">
+                <h1 class="play__heading">
+                    <span class="online__funny">Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.
+                </h1>
+                <p>Play games online for free without <br> downloading. Just click the Play button <br> and play
+                    instantly in your browser.</p>
+            </div>
 
-        <div class="play__img">
-            <div class="horse__man"><img src="images/Rectangle 55.png" alt="" class="ractangle__55"></div>
-            <div class="doll"> <img src="images/Rectangle 66.png" alt=""></div>
-        </div>
-    </section>
+            <div class="play__img">
+                <div class="horse__man"><img src="images/Rectangle 55.png" alt="" class="ractangle__55"></div>
+                <div class="doll"> <img src="images/Rectangle 66.png" alt=""></div>
+            </div>
+        </section>
 
-    <section class="game__topic">
-        <div class="topic"><img src="images/Rectangle 11.png" alt=""><p>Action Games</p></div>
-        <div class="topic"><img src="images/Rectangle 12.png" alt=""><p>Adventure Games</p></div>
-        <div class="topic"><img src="images/Rectangle 13.png" alt=""><p>Arcade Games</p></div>
-        <div class="topic"><img src="images/Rectangle 14.png" alt=""><p>Educational Games</p></div>
-        <div class="topic"><img src="images/Rectangle 15.png" alt=""><p>Word Games</p></div>
-        <div class="topic"><img src="images/Rectangle 16.png" alt=""><p>Role Playing Games</p></div>
-        <div class="topic"><img src="images/Rectangle 17.png" alt=""><p>Music & Audio Games </p></div>
-        <div class="topic"><img src="images/Rectangle 18.png" alt=""><p>Puzzle Games</p></div>
-        <div class="topic"><img src="images/Rectangle 19.png" alt=""><p>Strategy Games</p></div>
-    </section>
+        <section class="game__topic">
+            <div class="topic"><img src="images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 16.png" alt="">
+                <p>Role Playing Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games </p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="topic"><img src="images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="logo footer__logo">
             <img src="images/bg remove logo.png" alt="logo" class="logo__img">
             <h2 class="logo__text footer__text"><span class="battle">Battle</span>Pro</h2>
         </div>
-<div class="total">
-    <div class="game__name">
-        <div class="game">Our Story</div>
-        <div class="game">Games</div>
-        <div class="game">Web Games</div>
-        <div class="game">Careers</div>
-        <div class="game">Support</div>
-        <div class="game">My Account</div>
-    </div>
-    <div class="icon">
-        <i class="fa-brands fa-twitter" style="color: rgb(82, 82, 255);"></i>
-        <i class="fa-brands fa-facebook" style="color: rgb(82, 82, 255);"></i>
-        <i class="fa-brands fa-youtube" style="color: red;"></i>
-        <i class="fa-brands fa-linkedin" style="color: rgb(82, 82, 255);"></i>
-        <i class="fa-brands fa-instagram" style="color: goldenrod;"></i>
-        <i class="fa-brands fa-apple"></i>
-    </div>
-    <div class="game__name under__topic">
-        <div class="game">Terms and Conditions</div>
-        <div class="game">Privacy Policy</div>
-        <div class="game">Cookie Policy</div>
-        <div class="game">Privacy Settings</div>
-    </div>
-    <div class="copy">
-        <p>Play Games  &copy; Gamer &copy; 2000-2023 Gammer Bangladesh</p>
-    </div>
-</div>
+        <div class="total">
+            <div class="game__name">
+                <div class="game">Our Story</div>
+                <div class="game">Games</div>
+                <div class="game">Web Games</div>
+                <div class="game">Careers</div>
+                <div class="game">Support</div>
+                <div class="game">My Account</div>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-twitter" style="color: rgb(82, 82, 255);"></i>
+                <i class="fa-brands fa-facebook" style="color: rgb(82, 82, 255);"></i>
+                <i class="fa-brands fa-youtube" style="color: red;"></i>
+                <i class="fa-brands fa-linkedin" style="color: rgb(82, 82, 255);"></i>
+                <i class="fa-brands fa-instagram" style="color: goldenrod;"></i>
+                <i class="fa-brands fa-apple"></i>
+            </div>
+            <div class="game__name under__topic">
+                <div class="game">Terms and Conditions</div>
+                <div class="game">Privacy Policy</div>
+                <div class="game">Cookie Policy</div>
+                <div class="game">Privacy Settings</div>
+            </div>
+            <div class="copy">
+                <p>Play Games &copy; Gamer &copy; 2000-2023 Gammer Bangladesh</p>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
